<resources>
    <string name="app_name">xCarrier 2.0</string>
    <string name="sign_in">sign in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="by_clicking_sign_in_you_accept_the_elemica_privacy_policy">By clicking Sign In you accept the \n Elemica Privacy Policy.</string>
    <string name="elemica_com"><u>elemica.com</u></string>
    <string name="enter_your_email_address_and_we_ll_send_you_link_to_reset_your_password">Enter your email address and we’ll send you link to reset \n your password.</string>
    <string name="resetpassword">Reset Password</string>
    <string name="user_settings">User Settings</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="address1">Address1</string>
    <string name="address2">Address2</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="postal">Postal code</string>
    <string name="phone">Phone</string>
    <string name="oldpassword">Old Password</string>
    <string name="newpass">New Password</string>
    <string name="confirmpass">Confirm Password</string>
    <string name="autoscan">Auto Scan</string>
    <string name="notidy">Notify Me</string>
    <string name="received">Received</string>
    <string name="delivered">Delivered</string>
    <string name="except">Exceptions</string>
    <string name="allstatuses">All Statuses</string>
    <string name="sms">SMS</string>
    <string name="notidyothers">Notify Others</string>
    <string name="logout">Log out</string>
    <string name="goodafter">Good Afternoon, User!</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="search">Search</string>
    <string name="checkin">Check</string>
    <string name="checkinbutton">CHECK IN</string>
    <string name="checkoutbutton">CHECK OUT</string>
    <string name="searchpack">Search Packages</string>
    <string name="backtosign">Back to Sign In</string>
    <string name="process">Process Package</string>
    <string name="next">NEXT</string>
    <string name="manual">Manual Entry</string>
    <string name="building">Building</string>
    <string name="there_are_no_pending_deliveries_to_show">There are no pending deliveries to show</string>

    <string-array name="building">

        <item>Building</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="selectstatus">Select Status</string>
    <string name="mailst">Mail Stop</string>
    <string name="bin">Bin</string>
    <string name="storage_loc">Storage Location</string>
    <string name="docnumber">Dock Number</string>
    <string name="signedby">Signed By</string>
    <string name="signedhere">Sign Here</string>
    <string name="enternotes">Enter notes here</string>
    <string name="manual_entry">Manual Entry</string>
    <string name="scanner">Scanner</string>
    <string name="conslidate_msg">Choosing to consolidate these packages will create bulk ID. A single status must be applied to consolidated packages.</string>
    <string name="ok">Ok</string>
    <string name="back">BACK</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="areusure">Are you sure?</string>
    <string name="trackinginfo">The tracking information will be removed. You cannot undo this action.</string>
    <string name="location">Location</string>
    <string name="dribername">Driver Name</string>
    <string name="carrersign">Carrier Signature</string>
    <string name="reason">Reason</string>
    <string name="route">Route</string>
    <string name="locker">Locker</string>
    <string name="processtext">To process a package add a tracking ID.</string>
    <string name="takemoreimage">Take one or more pictures for proof of delivery</string>
    <string name="yes">Yes</string>

    <string name="permission_required">Permission Required</string>
    <string name="permission_message">You must grant permission to access camera and external storage to run this application.</string>
    <string name="permission_warning">All permissions are required.</string>
    <string name="digital_sign">Digital Signature</string>
    <string name="retake">RETAKE</string>
    <string name="send">SEND</string>
    <string name="pending">Pending Deliveries</string>
    <string name="loadmore">Load more</string>
    <string name="no">No</string>


    <string name="activity_intent_filter_action">com.elemicabatch.datawedge.kotlin.ACTION</string>
    <string name="activity_intent_filter_action2">com.elemicamain.datawedge.kotlin.ACTION</string>
    <string name="activity_intent_filter_action3">com.elemicaprocess.datawedge.kotlin.ACTION</string>
    <string name="activity_intent_filter_action4">com.elemicabatch.datawedge.kotlin.ACTION</string>
    <string name="activity_intent_filter_action5">com.elemicaprocessfinal.datawedge.kotlin.ACTION</string>


    <string name="datawedge_intent_key_source">com.symbol.datawedge.source</string>
    <string name="datawedge_intent_key_label_type">com.symbol.datawedge.label_type</string>
    <string name="datawedge_intent_key_data">com.symbol.datawedge.data_string</string>
    <string name="msgstatus">Application Needs Your Permission. Please Grant Permission</string>
    <string name="clear">Clear</string>
    <string name="edit">Edit Package</string>
    <string name="carrier_select">Select Carrier</string>
    <string name="networkmsg">You are offline.Internet Connection is not available</string>
    <string name="servererror">The server encountered an internal error or misconfiguration and was unable to complete your request.</string>
    <string name="enteremail">Please enter Email and Password</string>
    <string name="validemail">Please enter valid Email Address</string>
    <string name="passempty">Please enter Password</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="take_photo">Take Photo</string>
    <string name="choosing_to_consolidate_these_packages_will_create_a_bulk_id_a_single_status_must_be_applied_to_consolidated_packages">Choosing to consolidate these packages will create a bulk ID. A single status must be applied to consolidated packages.</string>
    <string name="enterfirstname">Please enter First Name</string>
    <string name="enterlastname">Please enter Last Name</string>
    <string name="enteraddress1">Please enter Address1</string>
    <string name="enteraddress2">Please enter Address2</string>
    <string name="entercity">Please enter city</string>
    <string name="stateemp">Please enter State</string>
    <string name="countryemp">Please enter country</string>
    <string name="postalemp">Please enter postal code</string>
    <string name="mobilemp">Please enter Mobile Number</string>
    <string name="oldpasswordemp">Please enter old password</string>
    <string name="newpassemp">Please enter new password</string>
    <string name="confirmpassemp">Please enter confirm password</string>
    <string name="newconfirmdiff">New Password and Confirm Passwod are not same</string>
    <string name="changepassword">CHANGE PASSWORD</string>
    <string name="savechanges">SAVE CHANGES</string>
    <string name="douwantexit">Are you sure You want to Sign Out?</string>
    <string name="passwordlength">Password should be 8 to 16 characters only</string>
    <string name="passwordcontains">Password Length should be between 8-16, with 1 Capital Letter, 1 Number and 1 Special Character</string>
    <string name="check_in">CHECK IN</string>
    <string name="check_out">CHECK OUT</string>
    <string name="title_activity_tab_navigations">TabNavigations</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="scanalereay">This barcode already scanned.Do you want to continue?</string>
    <string name="alertscan">The previous scanned or entered data will be lost.Do you want to continue?</string>
    <string name="carriernmae">Carrier Name</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="back_to_sign_in">Back to Sign In</string>


</resources>