<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="260dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:elevation="20dp"
    android:layout_gravity="center"


    android:background="@color/white"
    android:layout_height="wrap_content">

    <TextView
        android:textColor="#000000"
        android:layout_marginStart="10dp"

        android:layout_gravity="center"
        android:textSize="15.8sp"
        android:text="@string/areusure"
        android:layout_marginTop="16dp"

        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>





    <TextView
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"

        android:layout_gravity="center"
        android:textSize="13.82sp"
        android:text="@string/trackinginfo"

        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>



    <LinearLayout
        android:layout_marginBottom="16dp"
        android:layout_gravity="end"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <TextView
            android:fontFamily="@font/open_sans_bold"

            android:textStyle="bold"
            android:textSize="14sp"

            android:textAllCaps="false"
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/purple_200"


            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
             />


        <TextView

            android:fontFamily="@font/open_sans_bold"
            android:layout_alignParentEnd="true"
            android:textStyle="bold"
            android:textSize="14sp"

            android:textAllCaps="false"
            android:id="@+id/oktext"
            android:layout_width="wrap_content"
            android:text="@string/delete"
            android:textColor="@color/purple_200"


            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp" />


    </LinearLayout>


</LinearLayout>