<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CheckFragment">

  <LinearLayout
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:id="@+id/toolbar"
        android:background="@color/purple_700">




      <TextView
          android:fontFamily="@font/open_sans"

          android:layout_gravity="center"

          android:id="@+id/headertext"
          android:textSize="19.74sp"
          android:textColor="#FBFBFB"
          android:layout_height="wrap_content"
          android:layout_width="wrap_content"
          android:lineSpacingMultiplier="1.16"
          android:text="@string/checkin" />

      <ImageView
          android:layout_marginEnd="16dp"
          android:id="@+id/profile"
          android:layout_marginStart="20dp"
          android:layout_gravity="end"
          android:src="@drawable/syncnew"
          android:layout_width="24dp"
          android:layout_height="24dp"/>



    </androidx.appcompat.widget.Toolbar>



    <RelativeLayout
        android:layout_marginTop="24dp"
        android:layout_marginEnd="33dp"

        android:layout_marginStart="24dp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">



      <com.google.android.material.textfield.TextInputLayout
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:hint="@string/building">

        <!--this is the actual edit text which takes the input-->
        <com.google.android.material.textfield.TextInputEditText
            android:textSize="13.82sp"
            android:padding="10dp"
            android:id="@+id/building_text"
            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890"


            android:textColor="@color/black"

            android:layout_width="235dp"
            android:layout_height="40dp" />

      </com.google.android.material.textfield.TextInputLayout>





      <ImageView
          android:layout_centerVertical="true"
          android:layout_alignParentEnd="true"
          android:layout_gravity="center"



          android:src="@drawable/scanblue"
          android:layout_width="36dp"
          android:layout_height="36dp"
          android:id="@+id/barcode">

      </ImageView>

    </RelativeLayout>


    <LinearLayout
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:orientation="horizontal">


      <TextView
          android:id="@+id/checkin"
          android:layout_width="120dp"
          android:layout_height="16dp"
          android:fontFamily="@font/open_sans_bold"
          android:gravity="center"
          android:lineSpacingMultiplier="1.18"
          android:text="@string/check_in"
          android:textColor="#007CBB"
          android:textSize="13.55sp"
          android:textStyle="bold" />

      <TextView
          android:id="@+id/checkout"
          android:layout_width="120dp"
          android:layout_height="16dp"
          android:height="16dp"
          android:fontFamily="@font/open_sans_bold"
          android:gravity="center"
          android:lineSpacingMultiplier="1.18"
          android:text="@string/check_out"
          android:textColor="#007CBB"
          android:textSize="13.55sp"
          android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:visibility="invisible"

        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/checkInDetailsLL"
        android:orientation="vertical">


      <TextView
          android:layout_marginBottom="16dp"
          android:background="@color/white"
          android:layout_marginTop="14dp"
          android:textColor="#DE000000"
          android:textSize="15.8sp"
          android:fontFamily="@font/open_sans"
          android:height="24dp"
          android:layout_height="wrap_content"
          android:layout_width="fill_parent"
          android:letterSpacing="0.015"
          android:lineSpacingMultiplier="1.52"
          android:text="Check-In Time :"
          android:width="156dp" />


      <TextView
          android:padding="4dp"
          android:gravity="center|start"

          android:text="@string/process"


          android:id="@+id/checkintime"
          android:elevation="3dp"
          android:layout_marginBottom="16dp"
          android:background="@drawable/et_bg"
          android:textColor="#DE000000"
          android:textSize="12sp"
          android:fontFamily="@font/open_sans"
          android:height="40dp"
          android:layout_height="wrap_content"
          android:layout_width="fill_parent"
          android:letterSpacing="0.015"
          android:lineSpacingMultiplier="1.52"
          android:width="156dp" />





    </LinearLayout>


    <LinearLayout
        android:visibility="gone"

        android:layout_gravity="center_horizontal"
        android:id="@+id/info_layout"
        android:elevation="5dp"

        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:background="@drawable/cons_bg2"
        android:layout_width="260dp"
        android:layout_height="wrap_content">

      <TextView
          android:id="@+id/checkout_msg"
          android:letterSpacing="0.0015"
          android:textColor="#99000000"

          android:layout_marginTop="20dp"
          android:layout_marginStart="24dp"
          android:layout_marginEnd="24dp"
          android:textSize="15.8sp"
          android:fontFamily="@font/open_sans"
          android:layout_height="wrap_content"
          android:layout_width="fill_parent"
          android:lineSpacingMultiplier="1.52"
          android:width="232dp" />


      <TextView
          android:layout_marginEnd="8dp"
          android:layout_marginBottom="15dp"
          android:layout_marginTop="25dp"
          android:layout_gravity="end"
          android:textColor="#007CBB"
          android:textSize="13.55sp"
          android:fontFamily="@font/open_sans_bold"
          android:textStyle="bold"
          android:id="@+id/oktext"
          android:gravity="center"
          android:height="16dp"
          android:layout_height="wrap_content"
          android:layout_width="wrap_content"
          android:letterSpacing="0.125"
          android:lineSpacingMultiplier="1.18"
          android:text="@string/ok"
          android:width="81dp" />

    </LinearLayout>




  </LinearLayout>

</FrameLayout>