<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
   >



<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">


        <ImageView
            android:id="@+id/logo"


            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/filledTextField"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintHorizontal_bias="0.5"
            android:layout_marginTop="135dp"

            android:src="@drawable/logo"
            android:layout_width="312dp"
            android:layout_height="47.35dp"
           />


        <com.google.android.material.textfield.TextInputLayout
            app:layout_constraintTop_toBottomOf="@id/logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/filledTextField"
            android:layout_marginTop="90.65dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/email">

            <!--this is the actual edit text which takes the input-->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailtext"
                android:textSize="13.82sp"
                android:padding="3dp"
                android:inputType="textEmailAddress"


                android:textColor="@color/black"

                android:drawableEnd="@drawable/ic_outline_email_24"
                android:layout_width="match_parent"
                android:layout_height="40dp" />

        </com.google.android.material.textfield.TextInputLayout>





        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@id/filledTextField"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/passwordtextfield"



            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/password">

            <!--this is the actual edit text which takes the input-->
            <com.google.android.material.textfield.TextInputEditText
                android:textSize="13.82sp"
                android:padding="3dp"
                android:id="@+id/password"
                android:inputType="textPassword"



                android:textColor="@color/black"

                android:drawableEnd="@drawable/ic_outline_lock_24"
                android:layout_width="match_parent"
                android:layout_height="40dp" />

        </com.google.android.material.textfield.TextInputLayout>












        <TextView

            app:layout_constraintTop_toBottomOf="@id/passwordtextfield"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"


            android:id="@+id/forgotpassword"
            android:textColor="@color/purple_700"
            android:layout_marginRight="20dp"
            android:layout_marginTop="19dp"
            android:gravity="end"
            android:layout_gravity="end"
            android:height="20dp"
            android:textSize="13.82sp"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:lineSpacingMultiplier="1.45"
            android:text="@string/forgot_password"
            android:width="118dp" />

        <TextView

            app:layout_constraintTop_toBottomOf="@id/forgotpassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"


            android:id="@+id/login"
            android:layout_width="264dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/buttonshape"
            android:fontFamily="@font/open_sans_semibold"
            android:gravity="center"
            android:text="@string/sign_in"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="14dp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/policymessage"
            app:layout_constraintTop_toBottomOf="@id/login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"


            android:textSize="11.85sp"
            android:textColor="#99000000"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:height="40dp"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:lineSpacingMultiplier="1.35"
            android:text="@string/by_clicking_sign_in_you_accept_the_elemica_privacy_policy"
            android:width="332dp" />


        <ImageView
            android:id="@+id/elemicalogo"
            app:layout_constraintTop_toBottomOf="@id/policymessage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"


            android:layout_marginTop="40dp"
            android:layout_gravity="center"

            android:src="@drawable/elemica"
            android:layout_width="80.27dp"
            android:layout_height="30dp"/>


        <TextView
            app:layout_constraintTop_toBottomOf="@id/elemicalogo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"


            android:id="@+id/privacy"
            android:textColor="#DE000000"
            android:textStyle="normal"
            android:textSize="11.8sp"
            android:gravity="center"
            android:height="16dp"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:lineSpacingMultiplier="1.35"
            android:text="@string/elemica_com"
            android:width="74dp" />

        <TextView

            app:layout_constraintTop_toBottomOf="@id/privacy"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"


            android:fontFamily="@font/open_sans"

            android:id="@+id/version"
            android:textColor="#99000000"
            android:textStyle="normal"
            android:textSize="10.8sp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:lineSpacingMultiplier="1.35"
            android:text="v1.0.1"
            android:width="74dp" />



</androidx.constraintlayout.widget.ConstraintLayout>

</layout>